# mersenne-prime-checker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
api/app/: _llcore.py  db.py  main.py  ws.py
api/app/routes/: blocks.py  digits.py  jobs.py  primes.py
api/app/schema/: models.py
api/app/services/: ll_runner.py
api/data/: app.db-shm  app.db-wal
api/data/artifacts/e87c85b92e1b49e89a7c868de612c951/: M_44497_decimal.txt
cpp/: CMakeLists.txt
cpp/bindings/python/: CMakeLists.txt  module.cpp
cpp/cli/: ll_cli.cpp
cpp/cmake/: FindGMP.cmake
cpp/include/ll/: hash.hpp  ll.hpp  prime.hpp
cpp/src/: hash.cpp  ll_core.cpp  mersenne_reduce.cpp  prime.cpp
cpp/tests/: CMakeLists.txt  test_ll_small.cpp  test_progress.cpp
scripts/: build_all.sh  dev_up.sh  fmt.sh  lint.sh
tests/: smoke_llcore.py
web/: package-lock.json  package.json  tailwind.config.ts
web/src/: types.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  viewport.ts
web/src/app/lists/: page.tsx
web/src/app/run/: page.tsx
web/src/components/: BlockDrawer.tsx  BlockGrid.tsx  FloatingRunner.tsx  FloatingRunnerHost.tsx  Footer.tsx  Navbar.tsx  PrimeHits.tsx  Runner.tsx  ThemeToggle.tsx
web/src/lib/: active.ts  api.ts  ws.ts
